--- a/index.html
+++ b/index.html
@@ -15,21 +15,29 @@
     <h1>Joel's Push Pull Legs Workout Routine</h1>
 </header>
 <section id="day-1">
-<header>
+<header class="push-day-1">
     <h2>Day 1: Push Day</h2>
+</header>
+<header class="muscle-groups">
+    <h3>Targeted Muscle Groups</h3>
+    <ul>
+        <li>Chest</li>
+        <li>Shoulders</li>
+        <li>Triceps</li>
+    </ul>
 </header>
 <header class="workouts">
     <h3>Workouts</h3>
 </header>
 <ul>
-    <li>Flat Dumbbell Press</li>
+    <li><a href="how-to/index.html#dumbell-press">Dumbbell Press</a></li>
     <li>Incline Dumbbell Press</li>
     <li>High to Low Cable Fly</li>
     <li>Dumbbell Shoulder Press</li>
     <li>Dumbbell Lateral Raise</li>
     <li>Cable Lateral Raise</li>
     <li>EZ Bar Overhead Tricep Extension</li>
-    <li>Rope Tricep Pushdown</li>
+    <li>Rope Tricep Extension</li>
     <li>Leanover Cable Tricep Extension</li>
 </ul>
 <header class="how-to">
@@ -42,6 +50,14 @@
     <li>Inhale at the top, or while lowering the dumbbells with control back to your shoulders.</li>
     <li>Repeat for reps.</li>
 </ol>
+<h4>Incline Dumbell Press</h4>
+        <ol>
+            <li>Adjust the incline of a bench to be around 30-45 degrees.</li>
+            <li>Sit down and lift a pair of dumbbells to the starting position.</li>
+            <li>Press the dumbbells up to straight arms while exhaling.</li>
+            <li>Press the dumbbells up to straight arms while exhaling.</li>
+            <li>Inhale at the top or while lowering the dumbbells with control back to your shoulders.</li>
+        </ol>
 <h4>High to Low Cable Fly</h4>
 <ol>
     <li>Set both pulleys as high as possible and select the desired weight.</li>
@@ -80,7 +96,7 @@
     <li>Extend arms, lifting the bar overhead.</li>
     <li>Repeat for reps.</li>
 </ol>
-<h4>Rope Tricep Pushdown</h4>
+<h4>Rope Tricep Extension</h4>
 <ol>
     <li>Stand one step away from the cable pulley, and grip end of ropes about 6 inches apart.</li>
     <li>Pull ropes down past your sides extending your arms to an straight position.</li>
@@ -95,6 +111,287 @@
     <li>Switch arms and repeat for reps.</li>
 </ol>
 </section>
+
+<section id="day-2">
+<header class="pull-day-1">
+    <h2>Day 2: Pull Day</h2>
+</header>
+<header class="muscle-groups">
+    <h3>Targeted Muscle Groups</h3>
+    <ul>
+        <li>Back</li>
+        <li>Biceps</li>
+    </ul>
+</header>
+<header class="workouts">
+    <h3>Workouts</h3>
+</header>
+<ul>
+    <li>Deadlift</li>
+    <li>Lat Pulldown</li>
+    <li>Barbell Row</li>
+    <li>Dumbell Row</li>
+    <li>Reverse Cable Flyes</li>
+    <li>Barbell Curl</li>
+    <li>Dumbell Curl</li>
+    <li>Hammer Curl</li>
+</ul>
+<header class="how-to">
+    <h3>How to perform these workouts:</h3>
+    </header>
+    <h4>Deadlift</h4>
+    <ol>
+        <li>Step up close to the bar so that it is about over the middle of your foot.</li>
+        <li>Inhale, lean forward, and grip the bar.</li>
+        <li>Hold your breath, brace your core slightly, and lift the bar.</li>
+        <li>Pull the bar close to your body, with a straight back, until you are standing straight.</li>
+        <li>Lower the bar back to the ground with control.</li>
+        <li>Take another breath, and repeat for reps.</li>
+    </ol>
+    <h4>Lat Pulldown</h4>
+    <ol>
+        <li>Begin by adjusting the thigh pad to fit snugly against your thighs to prevent your body from lifting off the seat.</li>
+        <li>Grasp the bar with an overhand (pronated) grip, with your hands slightly wider than shoulder-width apart.</li>
+        <li>Sit with your thighs under the thigh pad, keep your chest up, and look at the bar.</li>
+        <li>Pull the bar down towards your chest, leading with your elbows. Pull until the bar is below your chin or touches your upper chest.</li>
+        <li>Squeeze your shoulder blades together at the bottom of the movement.</li>
+        <li>Exhale and slowly release the bar back up to the starting position.</li>
+    </ol>
+    <h4>Barbell Row</h4>
+    <ol>
+        <li>Grip the bar with an overhand grip.</li>
+        <li>Lean forward with the bar hanging from straight arms.</li>
+        <li>Inhale and pull the bar towards you.</li>
+        <li>Pull the bar as high as you can so that it touches your abs or chest, if possible.</li>
+        <li>With control, lower the bar back to the starting position.</li>
+    </ol>
+    <h4>Dumbell Row</h4>
+    <ol>
+        <li>Start by placing a dumbbell on the floor beside a bench or chair. Stand facing the bench or chair and place your left hand and left knee on top of it.</li>
+        <li>Keep your back flat and parallel to the ground, with a slight bend in the standing leg. Grip the dumbbell with your right hand.</li>
+        <li>Inhale and pull the dumbbell by driving the elbow toward the ceiling.</li>
+        <li>With control, lower the dumbbell back to the starting position while exhaling.</li>
+        <li>Complete desired reps on one side, then switch to the opposite arm and leg.</li>
+    </ol>
+    <h4>Reverse Cable Flyes</h4>
+    <ol>
+        <li>Stand facing shoulder height cable pulleys and grap left pulley handle with right hand and right pulley handle with left hand.</li>
+        <li>With slightly bent arms, pull arms all the way back while squeezing back muscles together.</li>
+        <li>Move arms back to start position and repeat for reps.</li>
+    </ol>
+    <h4>Barbell Curl</h4>
+    <ol>
+        <li>Grip a bar with an underhand (supinated) grip, hands about shoulder-width apart.</li>
+        <li>Lift the bar with control, by flexing your elbows.</li>
+        <li>Do not let your upper arm travel back during the curl, keep it at your side or move it slightly forward.</li>
+        <li>Reverse the movement and lower the bar back to the starting position.</li>
+    </ol>
+    <h4>Dumbell Curl</h4>
+    <ol>
+        <li>Hold a pair of dumbbells in an underhand (supinated) grip, arms hanging by your sides.</li>
+        <li>Lift the dumbbells with control, by flexing your elbows.</li>
+        <li>Do not let your upper arms travel back during the curl. Keep them at your sides or move them slightly forward.</li>
+        <li>Reverse the movement and lower the dumbbells back to the starting position.</li>
+    </ol>
+    <h4>Hammer Curl</h4>
+    <ol>
+        <li>Hold a pair of dumbbells in a neutral grip (palms facing each other), arms hanging by your sides.</li>
+        <li>Lift the dumbbells with control by flexing your elbows.</li>
+        <li>Do not let your upper arms travel back during the curl. Keep them at your sides, or move them slightly forward.</li>
+        <li>Reverse the movement and lower the dumbbells back to the starting position.</li>
+    </ol>
+</section>
+
+<section id="day-3">
+<header class="leg-day-1">
+    <h2>Day 3: Leg Day</h2>
+</header>
+<header class="muscle-groups">
+    <h3>Targeted Muscle Groups</h3>
+    <ul>
+        <li>Quads</li>
+        <li>Hamstrings</li>
+        <li>Glutes</li>
+    </ul>
+</header>
+<header class="workouts">
+    <h3>Workouts</h3>
+</header>
+<ul>
+    <li>Leg Extensions</li>
+    <li>Leg Press</li>
+    <li>Bulgarin Lunges</li>
+    <li>Romanian Deadlif</li>
+    <li>Seated Leg Curl</li>
+</ul>
+<header class="how-to">
+    <h3>How to perform these workouts:</h3>
+    </header>
+    <h4>Leg Extensions</h4>
+    <ol>
+        <li>Adjust the machine so that you are correctly positioned. Your knees should be in line with the machine’s joint.</li>
+        <li>Extend your knees with control, until they are completely straight.</li>
+        <li>Slowly lower the weight again.</li>
+    </ol>
+    <h4>Leg Press</h4>
+    <ol>
+        <li>Adjust the machine so that you only need to extend your legs slightly to be able to release the weights. Adjust the safety pins so that they catch the weight if you are unable to lift it.</li>
+        <li>Place your feet on the platform, about shoulder-width apart.</li>
+        <li>Inhale and lower the weight by bending your legs.</li>
+        <li>Lower the weight as deep as possible without rounding your back and while keeping your glutes on the seat.</li>
+        <li>Press the weight back up again as you exhale.</li>
+    </ol>
+    <h4>Bulgarian Lunges</h4>
+    <ol>
+        <li>Start by standing about 2 feet in front of a knee-level bench or step.</li>
+        <li>Lift your right leg up behind you and place the top of your foot on the bench. Your feet should still be about shoulder-width apart, and your right foot should be far enough in front of the bench where you can comfortably lunge.</li>
+        <li>While engaging your core, roll your shoulders back and lean slightly forward at the waist, beginning to lower down on your left leg, bending the knee.</li>
+        <li>If completing a quad-dominant Bulgarian split squat, stop before your knee falls over your toes. If completing a glute-dominant Bulgarian split squat, stop when your left thigh is parallel to the ground.</li>
+        <li>Push up through your left foot, using the power from your quads and hamstrings to return to standing.</li>
+        <li>Repeat for the desired number of reps on this leg, then switch, putting the left foot up on the bench. If you desire more challenge, hold dumbells while doing this exercise.</li>
+    </ol>
+    <h4>Romanian Deadlift</h4>
+    <ol>
+        <li>Get into the starting position by deadlifting a barbell off the floor, or by unracking it from a barbell rack.</li>
+        <li>Inhale, brace your core slightly, and lean forward by hinging in your hips. Keep your knees almost completely extended.</li>
+        <li>Lean forward as far as possible without rounding your back. You don’t have to touch the barbell to the floor, although it is OK if you do.</li>
+        <li>Reverse the movement and return to the starting position. Exhale on the way up.</li>
+        <li>Take another breath, and repeat for reps.</li>
+    </ol>
+    <h4>Seated Leg Curl</h4>
+    <ol>
+        <li>Adjust the machine so that you are correctly positioned. Your knees should be in line with the machine’s joint.</li>
+        <li>Push the weight down by bending your knees as far as possible.</li>
+        <li>Slowly let the weight back again.</li>
+    </ol>
+</section>
+
+<section id="day-4">
+    <header class="push-day-2">
+        <h2>Day 4: Push Day</h2>
+    </header>
+    <header class="muscle-groups">
+        <h3>Targeted Muscle Groups</h3>
+        <ul>
+            <li>Chest</li>
+            <li>Shoulders</li>
+            <li>Triceps</li>
+        </ul>
+    </header>
+    <header class="workouts">
+        <h3>Workouts</h3>
+    </header>
+    <ul>
+        <li>Bench Press</li>
+        <li>Incline Dumbbell Press</li>
+        <li>Dips</li>
+        <li>Military Press</li>
+        <li>EZ Bar Upright Row</li>
+        <li>Dumbell Lateral Raise</li>
+        <li>Close-grip Bench Press</li>
+        <li>Overhead Cable Tricep Extension</li>
+    </ul>
+    <header class="how-to">
+        <h3>How to perform these workouts</h3>
+        </header>
+        <h4>Bench Press</h4>
+        <ol>
+            <li>Lie on the bench, pull your shoulder blades together and down, and slightly arch your back.</li>
+            <li>Grip the bar slightly wider than shoulder-width apart.</li>
+            <li>Inhale, hold your breath, and unrack the bar.</li>
+            <li>Lower the bar with control, until it touches your chest somewhere close to your sternum.</li>
+            <li>Push the bar up to the starting position while exhaling.</li>
+            <li>Take another breath while in the top position, and repeat for reps.</li>
+        </ol>
+        <h4>Incline Dumbell Press</h4>
+        <ol>
+            <li>Adjust the incline of a bench to be around 30-45 degrees.</li>
+            <li>Sit down and lift a pair of dumbbells to the starting position.</li>
+            <li>Press the dumbbells up to straight arms while exhaling.</li>
+            <li>Press the dumbbells up to straight arms while exhaling.</li>
+            <li>Inhale at the top or while lowering the dumbbells with control back to your shoulders.</li>
+        </ol>
+        <h4>Dips</h4>
+        <ol>
+            <li>Grip a dip station about shoulder-width apart, and climb or jump to get into the starting position.</li>
+            <li>Lower yourself with control until your shoulder is below your elbow, or as deep as you comfortably can.</li>
+            <li>Reverse the motion and return to the starting position.</li>
+        </ol>
+        <h4>Military Press</h4>
+        <ol>
+            <li>First, place a barbell in a rack at about chest height.</li>
+            <li>Grip the bar slightly wider than shoulder-width apart, and step close to it.</li>
+            <li>Inhale, lightly brace your core, and unrack the bar.</li>
+            <li>Let the bar rest against your front delts while you step back from the rack.</li>
+            <li>Press the bar up to straight arms while exhaling.</li>
+            <li>Inhale at the top or while lowering the bar with control back to your shoulders.</li>
+            <li>Repeat for reps.</li>
+        </ol>
+        <h4>EZ Bar Upright Row</h4>
+        <ol>
+            <li>Grip the bar with an overhand grip, slightly narrower than shoulder-width apart.</li>
+            <li>Pull the bar straight up until it is at the level of your chin.</li>
+            <li>With control, lower the bar back to the starting position.</li>
+        </ol>
+        <h4>Dumbell Lateral Raises</h4>
+        <ol>
+            <li>Grip the bar with an overhand grip, slightly narrower than shoulder-width apart.</li>
+            <li>Pull the bar straight up until it is at the level of your chin.</li>
+            <li>With control, lower the bar back to the starting position.</li>
+        </ol>
+
+</section>
+
+<section id="day-5">
+    <header class="pull-day-2">
+        <h2>Day 2: Pull Day</h2>
+    </header>
+    <header class="muscle-groups">
+        <h3>Targeted Muscle Groups</h3>
+        <ul>
+            <li>Back</li>
+            <li>Biceps</li>
+        </ul>
+    </header>
+    <header class="workouts">
+        <h3>Workouts</h3>
+    </header>
+    <ul>
+        <li>Pullups</li>
+        <li>Lat Pulldown</li>
+        <li>Cable Seated Row</li>
+        <li>Dumbell Row</li>
+        <li>Dumbell Shrug</li>
+        <li>Cable Lat Pulldown</li>
+        <li>Dumbell Curl</li>
+        <li>Incline Curl</li>
+        <li>Preacher Curl</li>
+    </ul>
+</section>
+
+<section id="day-6">
+    <header class="leg-day-2">
+        <h2>Day 6: Leg Day</h2>
+    </header>
+    <header class="muscle-groups">
+        <h3>Targeted Muscle Groups</h3>
+        <ul>
+            <li>Quads</li>
+            <li>Hamstrings</li>
+            <li>Glutes</li>
+        </ul>
+    </header>
+    <header class="workouts">
+        <h3>Workouts</h3>
+    </header>
+    <ul>
+        <li>Squat</li>
+        <li>Leg Press</li>
+        <li>Leg Extensions</li>
+        <li>Seated Leg Curls</li>
+    </ul>
+</section>
+
 
 
 </main>
