--- a/how-to/index.html
+++ b/how-to/index.html
@@ -156,7 +156,7 @@
     <li>Squeeze your shoulder blades together at the bottom of the movement.</li>
     <li>Exhale and slowly release the bar back up to the starting position.</li>
 </ol>
-<h4 id="barbell-row">Barbell Row</h4>
+<h4 id="bb-row">Barbell Row</h4>
 <ol>
     <li>Grip the bar with an overhand grip.</li>
     <li>Lean forward with the bar hanging from straight arms.</li>
@@ -245,8 +245,52 @@
 <header class="legs">
     <h2>Leg Workouts</h2>
 </header>
-
-
+<h4 id="squat">Squats</h4>
+<ol>
+    <li>Place the bar on your upper back. Inhale and brace your core slightly, and unrack the bar.</li>
+    <li>Take two steps back, and adjust your foot position.</li>
+    <li>Squat as deep as possible with good technique.</li>
+    <li>With control, stop and reverse the movement, extending your hips and legs again.</li>
+    <li>Exhale on the way up or exchange air in the top position.</li>
+    <li>Inhale and repeat for reps.</li>
+</ol>
+<h4 id="leg-extension">Leg Extensions</h4>
+    <ol>
+        <li>Adjust the machine so that you are correctly positioned. Your knees should be in line with the machine’s joint.</li>
+        <li>Extend your knees with control, until they are completely straight.</li>
+        <li>Slowly lower the weight again.</li>
+    </ol>
+    <h4 id="leg-press">Leg Press</h4>
+    <ol>
+        <li>Adjust the machine so that you only need to extend your legs slightly to be able to release the weights. Adjust the safety pins so that they catch the weight if you are unable to lift it.</li>
+        <li>Place your feet on the platform, about shoulder-width apart.</li>
+        <li>Inhale and lower the weight by bending your legs.</li>
+        <li>Lower the weight as deep as possible without rounding your back and while keeping your glutes on the seat.</li>
+        <li>Press the weight back up again as you exhale.</li>
+    </ol>
+    <h4 id="bulgarian-lunge">Bulgarian Lunges</h4>
+    <ol>
+        <li>Start by standing about 2 feet in front of a knee-level bench or step.</li>
+        <li>Lift your right leg up behind you and place the top of your foot on the bench. Your feet should still be about shoulder-width apart, and your right foot should be far enough in front of the bench where you can comfortably lunge.</li>
+        <li>While engaging your core, roll your shoulders back and lean slightly forward at the waist, beginning to lower down on your left leg, bending the knee.</li>
+        <li>If completing a quad-dominant Bulgarian split squat, stop before your knee falls over your toes. If completing a glute-dominant Bulgarian split squat, stop when your left thigh is parallel to the ground.</li>
+        <li>Push up through your left foot, using the power from your quads and hamstrings to return to standing.</li>
+        <li>Repeat for the desired number of reps on this leg, then switch, putting the left foot up on the bench. If you desire more challenge, hold dumbells while doing this exercise.</li>
+    </ol>
+    <h4 id="romanian-deadlift">Romanian Deadlift</h4>
+    <ol>
+        <li>Get into the starting position by deadlifting a barbell off the floor, or by unracking it from a barbell rack.</li>
+        <li>Inhale, brace your core slightly, and lean forward by hinging in your hips. Keep your knees almost completely extended.</li>
+        <li>Lean forward as far as possible without rounding your back. You don’t have to touch the barbell to the floor, although it is OK if you do.</li>
+        <li>Reverse the movement and return to the starting position. Exhale on the way up.</li>
+        <li>Take another breath, and repeat for reps.</li>
+    </ol>
+    <h4 id="leg-curl">Seated Leg Curl</h4>
+    <ol>
+        <li>Adjust the machine so that you are correctly positioned. Your knees should be in line with the machine’s joint.</li>
+        <li>Push the weight down by bending your knees as far as possible.</li>
+        <li>Slowly let the weight back again.</li>
+    </ol>
 </section>
 
 </main>
